Added custom function for powerline

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 !README.md
 !powerline/
 !powerline/*
+!powerline/*/*
 !ranger/
 !ranger/*
 !nvim/
@@ -11,4 +12,6 @@
 !fish/*
 !fish/
 !*.fish
+
+*__pycache__/*
 
