--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -33,9 +33,9 @@
   "python.linting.enabled": true,
   "python.jediEnabled": true,
   "python.jediPath": "~/workspace/python/venvs/nvim_env/lib/python3.9/site-packages",
-  "python.linting.pylintEnabled": false,
-  "python.linting.flake8Enabled": true,
-  "python.analysis.diagnosticPublishDelay" : 500,
+  "python.linting.pylintEnabled": true,
+  "python.linting.flake8Enabled": false,
+  "python.analysis.diagnosticPublishDelay" : 200,
   "python.autoComplete.showAdvancedMembers": true,
   "snippets.ultisnips.directories":
   [
