--- a/nvim/coc-settings.json
+++ b/nvim/coc-settings.json
@@ -27,20 +27,31 @@
     "value": "  ",
     "enumMember": "  "
   },
+  // diagnostics
+  "diagnostic.errorSign": "✘",
+  "diagnostic.warningSign": "",
+  "diagnostic.infoSign": "",
 
   // python config --> note these comments work in this json, as the parser is clever enough
   "python.pythonPath": "~/workspace/python/venvs/wvenv_3.9/bin",
   "python.linting.enabled": true,
   "python.jediEnabled": true,
   "python.jediPath": "~/workspace/python/venvs/nvim_env/lib/python3.9/site-packages",
-  "python.linting.pylintEnabled": true,
-  "python.linting.flake8Enabled": false,
+  "python.linting.pylintEnabled": false,
+  "python.linting.flake8Enabled": true,
+  "python.setLinter": "flake8",
   "python.analysis.diagnosticPublishDelay" : 200,
   "python.autoComplete.showAdvancedMembers": true,
   "snippets.ultisnips.directories":
   [
     "UltiSnips",
     "~/.config/nvim/UltiSnips/"
+  ],
+
+  //Flake 8 configuration
+  "python.linting.flake8Args": [
+    "--max-line-length=80",
+    "--ignore=E117,W503"                         // E117: idented comment, W503 line break before operator
   ],
 
   // lua config
