--- a/starship.toml
+++ b/starship.toml
@@ -1,7 +1,14 @@
 format="""
-╭$directory$git_branch$git_metrics$git_status$python$nodejs$rust$jobs$time
-╰$character$status
+╭[](fg:#3b4252)\
+$directory[](fg:#3b4252 bg:#888888)\
+$git_branch$git_metrics$git_status$git_commit$git_state\
+[](fg:#888888)$jobs$cmd_duration
+╰$character$status$battery
 """
+
+right_format="$python$nodejs$rust"
+# 
+# ╭$directory$git_branch$git_metrics$git_status$python$nodejs$rust$jobs$time
 # Note rounded border chars found on https://www.aestheticsymbols.me/borders.html
 
 # Inserts a blank line between shell prompts
@@ -9,19 +16,59 @@ add_newline = true
 
 [character]                            # The name of the module we are configuring is "character"
 vicmd_symbol = "[V](bold blue) "
+success_symbol = "[](bold green)"
+error_symbol = "[](bold red)"
 
 [python]
 symbol = "[](green)"
 style = "bold green"
 
 [git_branch]
-format = "on [$symbol$branch]($style) "
-symbol = ""
-style = "bold #558855"
+format = "[$symbol$branch]($style)"
+symbol = " "
+style = "fg:#222222 bg:#888888"
+
+# [git_status]
+# stashed = "[](blue)"
+# ahead = "⇡${count}"
+# diverged = "⇕⇡${ahead_count}⇣${behind_count}"
+# behind = "⇣${count}"
+# format = '([$all_status$ahead_behind]($style) )'
+
+
+[directory]
+truncation_length = 5
+truncation_symbol = "…/"
+home_symbol = ""
+read_only_style = "fg:red"
+read_only = "  "
+style = "bg:#3b4252"
+use_os_path_sep = true
+format = "[$path]($style)[$read_only]($read_only_style)[ ]($style)"
+
 
 [git_status]
-stashed = "[](blue)"
+format = '[ $all_status$ahead_behind]($style)'
+bg="bg:#888888"
+style = "bold bg:#888888"
+conflicted = "[](red) "
+up_to_date = "[](bold fg:#55ff55 bg:#888888) "
+untracked = "[](bold fg:#ffbb00 bg:#888888) "
 ahead = "⇡${count}"
 diverged = "⇕⇡${ahead_count}⇣${behind_count}"
-behind = "⇣${count}"
-format = '([$all_status$ahead_behind]($style) )'
+behind = "[⇣${count}](red)"
+stashed = "[](bold fg:blue bg:#888888)"
+modified = "[](bold fg:#f6f600 bg:#888888) "
+staged = '[++\($count\)](bold fg:green bg:#888888)'
+renamed = "[襁](bold fg:blue bg:#888888)"
+deleted = "[](bold fg:red bg:#888888) "
+
+[jobs]
+symbol = " 酪"
+style = "bold fg:#ffbb00"
+number_threshold = 1
+
+[battery]
+dischargin_symbol="ﮊ"
+[[battery.display]]
+style = "bold red"
