--- a/starship.toml
+++ b/starship.toml
@@ -40,7 +40,7 @@ style = "fg:#222222 bg:#aaaaaa"
 truncation_length = 5
 truncation_symbol = "…/"
 home_symbol = ""
-read_only_style = "fg:red"
+read_only_style = "fg:red bg:#3b4252"
 read_only = "  "
 style = "bg:#3b4252"
 format = "[$path]($style)[$read_only]($read_only_style)[ ]($style)"
