Change to CHADtree since Nvimtree clashed with current nvim version - added LSP signature help

--- a/starship.toml
+++ b/starship.toml
@@ -50,14 +50,14 @@ format = "[$path]($style)[$read_only]($read_only_style)[ ]($style)"
 format = '[ $all_status$ahead_behind]($style)'
 style = "bold bg:#4c566a"
 conflicted = "[](fg:#ff5555 bg:#4c566a) "
-up_to_date = "[](bold fg:#55ff55 bg:#4c566a) "
+up_to_date = "[](bold fg:#55bb65 bg:#4c566a) "
 untracked = "[](bold fg:#ffbb00 bg:#4c566a) "
 ahead = "⇡${count}(bold #ffbb00)"
 diverged = "⇕⇡${ahead_count}⇣${behind_count}"
 behind = "[⇣${count}](red)"
 stashed = "[](bold fg:blue bg:#4c566a)"
 modified = "[](bold fg:#f6f600 bg:#4c566a) "
-staged = '[++\($count\) ](bold fg:#4444aa bg:#4c566a)'
+staged = '[++\($count\) ](bold fg:#44a4fa bg:#4c566a)'
 renamed = "[襁](bold fg:blue bg:#4c566a)"
 deleted = "[](bold fg:red bg:#4c566a) "
 
@@ -76,5 +76,5 @@ style = "bold red"
 disabled = false
 format = '[$time](fg:#3b4252) '
 time_format = "%T"
-utc_time_offset = "-1"
+utc_time_offset = "+1"
 time_range = "0:00:00-24:00:00"
