Some mardown improvements for nvim

--- a/starship.toml
+++ b/starship.toml
@@ -2,8 +2,8 @@ format="""
 ╭[](fg:#2e3440)\
 $directory[](fg:#2e3440 bg:#4c566a)\
 $git_branch$git_metrics$git_status$git_commit$git_state\
-[](fg:#4c566a)$jobs $cmd_duration
-╰$character$status$battery
+[](fg:#4c566a)$jobs $cmd_duration $battery
+╰$character$status
 """
 
 right_format="$time$python$nodejs$rust"
