--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,11 +1,11 @@
 set -g history-limit 10000
-# unbind C-b
-# set -g prefix C-a
+unbind C-b
+set -g prefix C-a
 
 set -g mouse on
 
 unbind r
-bind r source-file ~/.tmux.conf \; display "Reloaded ~/.tmux.conf"
+bind r source-file ~/.config/tmux/tmux.conf \; display "Reloaded ~/.tmux.conf"
 
 set -g xterm-keys on
 
@@ -16,13 +16,15 @@ set-window-option -g mode-keys vi
 
 set-option -g focus-events on
 
+# start window indexing at one instead of zero
+set -g base-index 1
+
 #Splitting panes
 unbind v
 unbind h
 
 unbind % # Split vertically
 unbind '"' # Split horizontally
-
 bind v split-window -h -c "#{pane_current_path}"
 bind h split-window -v -c "#{pane_current_path}"
 
@@ -44,7 +46,6 @@ set -g set-titles on
 ######################
 
 # loud or quiet?
-set -g visual-activity off
 set -g visual-bell off
 set -g visual-silence off
 setw -g monitor-activity off
@@ -61,19 +62,23 @@ set -g pane-active-border-style 'bg=colour0 fg=colour9'
 # statusbar
 set -g status-position bottom
 set -g status-justify left
-set -g status-style 'bg=colour242 fg=colour137 dim'
+set -g status-style 'bg=colour234 fg=colour137 dim'
 set -g status-left ''
-set -g status-right '#[fg=color235, bg=colour240]#[fg=colour250, bg=colour237] %d/%m #[fg=color150, bg=colour237] %H:%M:%S '
+set -g status-right '#[fg=color237, bg=colour234]#[fg=colour250, bg=colour237] %d/%m #[fg=color150, bg=colour237] %H:%M:%S '
 set -g status-right-length 80
 set -g status-left-length 20
 
 setw -g window-status-current-style 'fg=colour9 bg=colour150 bold'
-setw -g window-status-current-format ' #I#[fg=colour240]:#[fg=colour232]#W#[fg=colour240]#F #[fg=colour150 bg=colour242]'
+setw -g window-status-current-format ' #I#[fg=colour240]:#[fg=colour232]#W#[fg=colour240]#F #[fg=colour150 bg=colour234]'
 
-setw -g window-status-style 'fg=colour9 bg=colour250'
-setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+setw -g window-status-style 'fg=colour9 bg=colour237'
+setw -g window-status-format ' #I#[fg=colour250]:#[fg=colour250]#W#[fg=colour244]#F #[fg=colour244 bg=colour234]'
 
 setw -g window-status-bell-style 'fg=colour255 bg=colour1 bold'
 
-# messages
-set -g message-style 'fg=colour232 bg=colour16 bold'
+# Commandline and messages
+set -g message-style 'fg=colour132 bg=colour0 bold'
+
+# pane dividers
+set -g pane-active-border-style 'fg=color155 bg=default'
+set -g pane-border-style 'fg=color255 bg=default'
